types: use `import type` for clarity

--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -15,8 +15,7 @@
   "preconstruct": {
     "entrypoints": [
       "index.ts",
-      "utilities/index.ts",
-      "plugins/index.ts"
+      "plugin/index.ts"
     ]
   },
   "dependencies": {
