fix: add noisejs as deps

--- a/demo/src/sandboxes/leva-theme/package.json
+++ b/demo/src/sandboxes/leva-theme/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "leva": "*",
     "@leva-ui/plugin-spring": "*",
+    "noisejs": "2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "3.4.3"
