--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@radix-ui/react-portal": "^0.0.6",
+    "@radix-ui/react-tooltip": "^0.0.9",
     "@stitches/react": "^0.1.0-canary.12",
     "@welldone-software/why-did-you-render": "^6.0.5",
     "clipboard-polyfill": "^3.0.2",
