fix: update deps

--- a/demo/package.json
+++ b/demo/package.json
@@ -7,12 +7,12 @@
   },
   "dependencies": {
     "@leva-ui/plugin-spring": "*",
+    "@stitches/react": "^0.1.0-canary.15",
     "leva": "*",
     "noisejs": "^2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "wouter": "^2.7.3",
-    "@stitches/react": "^0.1.0-canary.15"
+    "wouter": "^2.7.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.2",
