--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     ]
   },
   "scripts": {
-    "postinstall": "preconstruct dev",
+    "postinstall": "patch-package && preconstruct dev",
     "build": "preconstruct build",
     "watch": "preconstruct watch",
     "dev": "preconstruct dev",
@@ -48,27 +48,27 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/preset-env": "^7.13.9",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "@preconstruct/cli": "^2.0.6",
-    "@size-limit/preset-big-lib": "^4.10.0",
-    "@size-limit/preset-small-lib": "^4.10.0",
-    "@storybook/addon-actions": "^6.1.20",
-    "@storybook/addon-essentials": "^6.1.20",
-    "@storybook/addon-links": "^6.1.20",
+    "@size-limit/preset-big-lib": "^4.10.1",
+    "@size-limit/preset-small-lib": "^4.10.1",
+    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-links": "^6.1.21",
     "@storybook/addon-storysource": "^6.1.21",
-    "@storybook/react": "^6.1.20",
+    "@storybook/react": "^6.1.21",
     "@testing-library/cypress": "^7.0.4",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "@types/tinycolor2": "^1.4.2",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "babel-eslint": "^10.1.0",
     "concurrently": "^6.0.0",
-    "cypress": "^6.5.0",
+    "cypress": "^6.6.0",
     "eslint": "^7.21.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-cypress": "^2.11.2",
@@ -78,12 +78,14 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.1.3",
+    "patch-package": "^6.4.6",
+    "postinstall-postinstall": "^2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "size-limit": "^4.9.2",
+    "size-limit": "^4.10.1",
     "start-server-and-test": "^1.12.0",
     "tsd": "^0.14.0",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.3"
   },
   "prettier": {
     "semi": false,
