--- a/demo/src/sandboxes/leva-advanced-panels/package.json
+++ b/demo/src/sandboxes/leva-advanced-panels/package.json
@@ -6,10 +6,10 @@
     "leva": "*",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "4.0.3"
   },
   "scripts": {
-    "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
