--- a/demo/src/sandboxes/leva-custom-plugin/package.json
+++ b/demo/src/sandboxes/leva-custom-plugin/package.json
@@ -6,7 +6,7 @@
     "leva": "*",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "4.0.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.2",
@@ -14,7 +14,7 @@
     "typescript": "^4.1.5"
   },
   "scripts": {
-    "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
