--- a/demo/src/sandboxes/leva-minimal/package.json
+++ b/demo/src/sandboxes/leva-minimal/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "src/index.jsx",
   "dependencies": {
+    "@radix-ui/react-icons": "^1.0.2",
     "leva": "*",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "4.0.3"
   },
   "scripts": {
-    "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
