--- a/demo/src/sandboxes/leva-ui/package.json
+++ b/demo/src/sandboxes/leva-ui/package.json
@@ -9,11 +9,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "11.3.1",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.3",
     "react-use-gesture": "^9.0.0"
   },
   "scripts": {
-    "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
