deps: add @radix-ui/react-icons

--- a/demo/package.json
+++ b/demo/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@leva-ui/plugin-spring": "*",
+    "@radix-ui/react-icons": "^1.0.2",
     "@stitches/react": "^0.1.0-canary.15",
     "leva": "*",
     "noisejs": "^2.1.0",
