chore: add changeset setup (#135)

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "preconstruct build",
     "watch": "preconstruct watch",
     "dev": "preconstruct dev",
-    "release": "yarn build && yarn workspaces foreach --include leva npm publish",
+    "release": "yarn build && yarn changeset publish",
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
     "size": "yarn size-limit",
@@ -52,6 +52,7 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@changesets/cli": "^2.14.1",
     "@preconstruct/cli": "^2.0.6",
     "@radix-ui/react-icons": "^1.0.2",
     "@size-limit/preset-big-lib": "^4.10.1",
