chore: change build script for the demo to avoid conflict with codesandbox ci

--- a/demo/package.json
+++ b/demo/package.json
@@ -1,9 +1,10 @@
 {
   "name": "demo",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build-demo": "vite build"
   },
   "dependencies": {
     "@leva-ui/plugin-spring": "*",
