ci: other attempt

--- a/demo/package.json
+++ b/demo/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build-demo": "vite build"
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@leva-ui/plugin-spring": "*",
