chore: fix changeset action (#145)

--- a/demo/package.json
+++ b/demo/package.json
@@ -1,9 +1,11 @@
 {
   "name": "demo",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@leva-ui/plugin-spring": "*",
