--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "cypress:run": "cypress run",
     "demo:dev": "yarn workspace demo dev",
     "demo:build": "yarn workspace demo build",
-    "demo:serve": "cp ./demo/serve.json ./demo/dist && npx serve ./demo/dist",
+    "demo:serve": "yarn workspace demo serve",
     "ci:test": "yarn demo:build && start-server-and-test demo:serve http-get://localhost:5000 cypress:run"
   },
   "size-limit": [
