--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
         with:
-          install-command: yarn --immutable --silent
+          install-command: yarn --silent
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
