change updateInternalDependencies to minor

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,6 +7,6 @@
   ],
   "access": "public",
   "baseBranch": "master",
-  "updateInternalDependencies": "patch",
+  "updateInternalDependencies": "minor",
   "ignore": ["demo"]
 }
