ci: exclude paths from CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,11 @@
 name: CI
-on: [push]
+on:
+  push:
+    paths-ignore:
+      - 'demo/**'
+      - 'docs/**'
+      - '**.md'
+      - '.changeset/**'
 jobs:
   build:
     name: Build, lint, and test
