ci: final fix 🤷‍♂️

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
         with:
+          install-command: yarn --silent
           useLockFile: false
-      - run: yarn t
 
       - name: Check types
         run: yarn tsc
