--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,8 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install project
+        if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!
         run: yarn install --silent
-
-      - name: Check types
-        run: yarn tsc
 
       - name: Build
         run: yarn build
