--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,25 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install dependencies
-        run: yarn install --immutable --silent
+        run: yarn install --silent
+
+      - name: Check types
+        run: yarn tsc
 
       - name: Build
         run: yarn build
+
+      - uses: actions/cache@v2
+        name: Setup Yarn build cache
+        id: yarn-build-cache
+        with:
+          path: /dist
+          key: ${{ runner.os }}-yarn-build-${{ hashFiles('packages/') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-build-
+      - name: Yarn build
+        run: yarn build
+        if: steps.yarn-build-cache.outputs.cache-hit != 'true'
 
       - name: Cypress run
         run: yarn ci:test
