--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install dependencies
-        run: yarn install --immutable --silent
+        run: yarn install --silent
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
