--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-build-
 
-      - name: Yarn build
+      - name: Yarn build without cache
         if: steps.yarn-build-cache.outputs.cache-hit != 'true'
         run: yarn build
 
