--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install dependencies
-        run: yarn install --silent
+        run: yarn --immutable --silent
 
       - name: Check types
         run: yarn tsc
@@ -54,4 +54,5 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
+          install-command: yarn --immutable
           build: yarn run ci:test
