ci: re-establish cypress

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,4 @@ jobs:
         run: yarn build
 
       - name: Cypress run
-        uses: cypress-io/github-action@v2
-        with:
-          install-command: yarn --immutable
-          build: yarn run ci:test
+        run: yarn ci:test
