--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install dependencies
-        if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn --immutable --silent
 
       - name: Check types
