--- a/demo/package.json
+++ b/demo/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@leva-ui/plugin-plot": "*",
     "@leva-ui/plugin-spring": "*",
     "@radix-ui/react-icons": "^1.0.2",
     "@react-three/drei": "^3.11.1",
