--- a/packages/plugin-spring/package.json
+++ b/packages/plugin-spring/package.json
@@ -5,6 +5,12 @@
   "module": "dist/leva-ui-plugin-spring.esm.js",
   "types": "dist/leva-ui-plugin-spring.cjs.d.ts",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pmndrs/leva.git",
+    "directory": "packages/plugin-spring"
+  },
+  "bugs": "https://github.com/pmndrs/leva/issues",
   "peerDependencies": {
     "leva": ">=0.7.0",
     "react": ">=16.8.0",
