--- a/packages/plugin-bezier/package.json
+++ b/packages/plugin-bezier/package.json
@@ -14,8 +14,7 @@
   "peerDependencies": {
     "leva": ">=0.8.0",
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
-    "react-use-gesture": "^9.1.3"
+    "react-dom": ">=16.8.0"
   },
   "dependencies": {
     "react-use-measure": "^2.0.4"
