deps: downgrade tooltip

--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@radix-ui/react-portal": "^0.0.6",
-    "@radix-ui/react-tooltip": "^0.0.10",
+    "@radix-ui/react-tooltip": "0.0.9",
     "@stitches/react": "^0.1.0",
     "@welldone-software/why-did-you-render": "^6.1.1",
     "clipboard-polyfill": "^3.0.2",
