--- a/demo/package.json
+++ b/demo/package.json
@@ -8,24 +8,22 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@leva-ui/plugin-plot": "*",
-    "@leva-ui/plugin-spring": "*",
     "@radix-ui/react-icons": "^1.0.2",
-    "@react-three/drei": "^3.11.1",
-    "@stitches/react": "^0.1.0-canary.15",
+    "@react-three/drei": "^3.11.2",
+    "@stitches/react": "^0.1.0",
     "leva": "*",
     "noisejs": "^2.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-three-fiber": "^5.3.19",
     "three": "^0.126.1",
     "wouter": "^2.7.4"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
+    "@types/react-dom": "^17.0.3",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "typescript": "^4.2.3",
-    "vite": "^2.0.5"
+    "vite": "2.0.5"
   }
 }
