--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -23,13 +23,13 @@
   },
   "dependencies": {
     "@radix-ui/react-portal": "^0.0.6",
-    "@radix-ui/react-tooltip": "^0.0.9",
-    "@stitches/react": "^0.1.0-canary.20",
-    "@welldone-software/why-did-you-render": "^6.1.0",
+    "@radix-ui/react-tooltip": "0.0.9",
+    "@stitches/react": "^0.1.0",
+    "@welldone-software/why-did-you-render": "^6.1.1",
     "clipboard-polyfill": "^3.0.2",
     "dequal": "^2.0.2",
     "merge-value": "^1.0.0",
-    "react-colorful": "^5.0.0",
+    "react-colorful": "^5.0.1",
     "react-dropzone": "^11.3.1",
     "react-use-gesture": "^9.1.3",
     "tinycolor2": "^1.4.2",
