chore: add prettier to deps

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "husky": "^5.2.0",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
+    "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "size-limit": "^4.10.1",
