chore: try to run ci on pull_request

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,14 @@ on:
       - '!docs/**'
       - '!**.md'
       - '!.changeset/**'
+  pull_request:
+    paths:
+      - '.github/**'
+      - 'packages/**'
+      - '!demo/**'
+      - '!docs/**'
+      - '!**.md'
+      - '!.changeset/**'
 jobs:
   build:
     name: Build, lint, and test
