ci: add package.json to ci list

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
     paths:
       - '.github/**'
       - 'packages/**'
+      - 'package.json'
       - '!demo/**'
       - '!docs/**'
       - '!**.md'
