--- a/package.json
+++ b/package.json
@@ -52,36 +52,36 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
+    "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
-    "@changesets/cli": "^2.14.1",
+    "@changesets/cli": "^2.15.0",
     "@preconstruct/cli": "^2.0.6",
     "@radix-ui/react-icons": "^1.0.2",
-    "@size-limit/preset-big-lib": "^4.10.1",
-    "@size-limit/preset-small-lib": "^4.10.1",
-    "@storybook/addon-actions": "^6.1.21",
-    "@storybook/addon-essentials": "^6.1.21",
-    "@storybook/addon-links": "^6.1.21",
-    "@storybook/addon-storysource": "^6.1.21",
-    "@storybook/react": "^6.1.21",
-    "@testing-library/cypress": "^7.0.4",
+    "@size-limit/preset-big-lib": "^4.10.2",
+    "@size-limit/preset-small-lib": "^4.10.2",
+    "@storybook/addon-actions": "^6.2.3",
+    "@storybook/addon-essentials": "^6.2.3",
+    "@storybook/addon-links": "^6.2.3",
+    "@storybook/addon-storysource": "^6.2.3",
+    "@storybook/react": "^6.2.3",
+    "@testing-library/cypress": "^7.0.5",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/tinycolor2": "^1.4.2",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
     "babel-eslint": "^10.1.0",
-    "concurrently": "^6.0.0",
-    "cypress": "^6.8.0",
-    "eslint": "^7.22.0",
+    "concurrently": "^6.0.1",
+    "cypress": "6.8.0",
+    "eslint": "^7.23.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-cypress": "^2.11.2",
-    "eslint-plugin-flowtype": "^5.4.0",
+    "eslint-plugin-flowtype": "^5.6.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.0",
+    "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.2.0",
     "patch-package": "^6.4.7",
@@ -89,7 +89,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "size-limit": "^4.10.1",
+    "size-limit": "^4.10.2",
     "start-server-and-test": "^1.12.1",
     "tsd": "^0.14.0",
     "typescript": "^4.2.3"
