Add @hasparus as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -112,6 +112,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "hasparus",
+      "name": "Piotr Monwid-Olechnowicz",
+      "avatar_url": "https://avatars.githubusercontent.com/u/15332326?v=4",
+      "profile": "https://haspar.us/",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
