--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -110,7 +110,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/14338007?v=4",
       "profile": "https://n1ru4l.cloud/",
       "contributions": [
-        "code"
+        "code",
+        "ideas"
       ]
     },
     {
@@ -120,6 +121,15 @@
       "profile": "https://haspar.us/",
       "contributions": [
         "doc"
+      ]
+    },
+    {
+      "login": "jeetiss",
+      "name": "Dmitry Ivakhnenko",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6726016?v=4",
+      "profile": "https://jeetiss.github.io/",
+      "contributions": [
+        "code"
       ]
     }
   ],
