chore: add husky and pretty-quick

--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     ]
   },
   "scripts": {
-    "postinstall": "patch-package && preconstruct dev",
+    "postinstall": "husky install && patch-package && preconstruct dev",
     "build": "preconstruct build",
     "watch": "preconstruct watch",
     "dev": "preconstruct dev",
+    "lint": "pretty-quick --staged",
     "release": "yarn build && yarn changeset publish",
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
@@ -84,10 +85,11 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^5.2.0",
+    "husky": "^6.0.0",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "size-limit": "^4.10.2",
