--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,9 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@1.5.0/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "linked": [
-    ["leva", "@leva-ui/plugin-spring"]
-  ],
+  "linked": [],
   "access": "public",
   "baseBranch": "master",
   "updateInternalDependencies": "minor",
