types: better internal typing

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@changesets/cli": "^2.16.0",
+    "@emotion/react": "^11.1.5",
     "@preconstruct/cli": "^2.0.7",
     "@radix-ui/react-icons": "^1.0.3",
     "@size-limit/preset-big-lib": "^4.10.2",
@@ -76,7 +77,6 @@
     "@typescript-eslint/parser": "^4.22.0",
     "all-contributors-cli": "^6.20.0",
     "babel-eslint": "^10.1.0",
-    "concurrently": "^6.0.1",
     "cypress": "6.8.0",
     "eslint": "^7.24.0",
     "eslint-config-react-app": "^6.0.0",
