--- a/demo/src/sandboxes/leva-transient/package.json
+++ b/demo/src/sandboxes/leva-transient/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "main": "src/index.jsx",
   "dependencies": {
-    "@react-three/drei": "^3.11.1",
+    "@react-three/drei": "^4.3.3",
+    "@react-three/fiber": "^6.0.21",
     "leva": "*",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "react-three-fiber": "^5.3.19",
-    "three": "^0.126.1"
+    "three": "^0.128.0"
   },
   "scripts": {
     "start": "react-scripts start",
