--- a/demo/package.json
+++ b/demo/package.json
@@ -9,20 +9,20 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.0.3",
-    "@react-three/drei": "^3.11.2",
-    "@stitches/react": "^0.1.7",
+    "@react-three/drei": "^4.3.3",
+    "@react-three/fiber": "^6.0.21",
+    "@stitches/react": "^0.1.9",
     "leva": "*",
     "noisejs": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-three-fiber": "^5.3.22",
-    "three": "^0.127.0",
+    "three": "^0.128.0",
     "wouter": "^2.7.4"
   },
   "devDependencies": {
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@vitejs/plugin-react-refresh": "^1.3.2",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.4",
+    "@vitejs/plugin-react-refresh": "^1.3.3",
     "typescript": "^4.2.4",
     "vite": "2.0.5"
   }
