--- a/demo/package.json
+++ b/demo/package.json
@@ -10,20 +10,21 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.0.3",
     "@react-three/drei": "^4.3.3",
-    "@react-three/fiber": "^6.0.21",
+    "@react-three/fiber": "^6.2.2",
     "@stitches/react": "^0.1.9",
     "leva": "*",
     "noisejs": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "three": "^0.128.0",
+    "react-use": "^17.2.4",
+    "three": "^0.129.0",
     "wouter": "^2.7.4"
   },
   "devDependencies": {
-    "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.4",
+    "@types/react": "^17.0.9",
+    "@types/react-dom": "^17.0.6",
     "@vitejs/plugin-react-refresh": "^1.3.3",
-    "typescript": "^4.2.4",
+    "typescript": "^4.3.2",
     "vite": "2.0.5"
   }
 }
