--- a/demo/src/sandboxes/leva-busy/package.json
+++ b/demo/src/sandboxes/leva-busy/package.json
@@ -8,7 +8,8 @@
     "noisejs": "2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-use": "^17.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
