--- a/demo/package.json
+++ b/demo/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.0.3",
-    "@react-three/drei": "^4.3.3",
-    "@react-three/fiber": "^6.2.2",
-    "@stitches/react": "^0.1.9",
+    "@react-three/drei": "^6.1.2",
+    "@react-three/fiber": "^7.0.1",
+    "@stitches/react": "0.1.9",
     "leva": "*",
     "noisejs": "^2.1.0",
     "react": "^17.0.2",
@@ -21,8 +21,8 @@
     "wouter": "^2.7.4"
   },
   "devDependencies": {
-    "@types/react": "^17.0.9",
-    "@types/react-dom": "^17.0.6",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
     "@vitejs/plugin-react-refresh": "^1.3.3",
     "typescript": "^4.3.2",
     "vite": "2.0.5"
