--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-tooltip": "0.0.18",
     "@stitches/react": "^0.2.0",
     "@welldone-software/why-did-you-render": "^6.2.0",
+    "colord": "^2.0.1",
     "dequal": "^2.0.2",
     "merge-value": "^1.0.0",
     "react-colorful": "^5.2.2",
