--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -26,12 +26,12 @@
     "@radix-ui/react-tooltip": "0.0.18",
     "@stitches/react": "^0.2.0",
     "@welldone-software/why-did-you-render": "^6.2.0",
+    "colord": "^2.0.1",
     "dequal": "^2.0.2",
     "merge-value": "^1.0.0",
     "react-colorful": "^5.2.2",
     "react-dropzone": "^11.3.2",
     "react-use-gesture": "^9.1.3",
-    "tinycolor2": "^1.4.2",
     "v8n": "^1.3.3",
     "zustand": "^3.5.2"
   }
