--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "react-dom": "^17.0.2",
     "start-server-and-test": "^1.12.5",
     "tsd": "^0.17.0",
-    "typescript": "^4.3.2"
+    "typescript": "4.3.2"
   },
   "prettier": {
     "semi": false,
