Update to React 18 experimental createRoot API

--- a/demo/src/sandboxes/leva-theme/package.json
+++ b/demo/src/sandboxes/leva-theme/package.json
@@ -6,8 +6,8 @@
     "leva": "*",
     "@leva-ui/plugin-spring": "*",
     "noisejs": "2.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "experimental",
+    "react-dom": "experimental",
     "react-scripts": "4.0.3"
   },
   "scripts": {
