--- a/demo/package.json
+++ b/demo/package.json
@@ -14,8 +14,8 @@
     "@stitches/react": "0.2.0",
     "leva": "*",
     "noisejs": "^2.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "experimental",
+    "react-dom": "experimental",
     "react-use": "^17.2.4",
     "three": "^0.129.0",
     "wouter": "^2.7.4"
