--- a/demo/src/sandboxes/leva-advanced-panels/package.json
+++ b/demo/src/sandboxes/leva-advanced-panels/package.json
@@ -4,8 +4,8 @@
   "main": "src/index.jsx",
   "dependencies": {
     "leva": "*",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "experimental",
+    "react-dom": "experimental",
     "react-scripts": "4.0.3"
   },
   "scripts": {
