--- a/demo/src/sandboxes/leva-minimal/package.json
+++ b/demo/src/sandboxes/leva-minimal/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.0.2",
     "leva": "*",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "experimental",
+    "react-dom": "experimental",
     "react-scripts": "4.0.3"
   },
   "scripts": {
