--- a/demo/src/sandboxes/leva-plugin-spring/package.json
+++ b/demo/src/sandboxes/leva-plugin-spring/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "@leva-ui/plugin-spring": "*",
     "leva": "*",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "experimental",
+    "react-dom": "experimental",
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
