--- a/demo/src/sandboxes/leva-scroll/package.json
+++ b/demo/src/sandboxes/leva-scroll/package.json
@@ -7,8 +7,8 @@
   "dependencies": {
     "leva": "*",
     "noisejs": "2.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "experimental",
+    "react-dom": "experimental",
     "react-scripts": "4.0.3"
   },
   "scripts": {
