--- a/demo/src/sandboxes/leva-ui/package.json
+++ b/demo/src/sandboxes/leva-ui/package.json
@@ -6,8 +6,8 @@
   "main": "src/index.jsx",
   "dependencies": {
     "leva": "*",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "experimental",
+    "react-dom": "experimental",
     "react-dropzone": "11.3.1",
     "react-scripts": "4.0.3",
     "react-use-gesture": "^9.0.0"
