--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
   },
   "bugs": "https://github.com/pmndrs/leva/issues",
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=18.0",
+    "react-dom": ">=18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -88,8 +88,8 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.3.1",
     "pretty-quick": "^3.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "experimental",
+    "react-dom": "experimental",
     "start-server-and-test": "^1.12.5",
     "tsd": "^0.17.0",
     "typescript": "4.3.2"
