--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leva",
-  "version": "0.9.14",
+  "version": "0.10.0-alpha.1",
   "main": "dist/leva.cjs.js",
   "module": "dist/leva.esm.js",
   "types": "dist/leva.cjs.d.ts",
@@ -18,8 +18,8 @@
     ]
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=18.0",
+    "react-dom": ">=18.0"
   },
   "dependencies": {
     "@radix-ui/react-portal": "^0.0.13",
@@ -33,6 +33,6 @@
     "react-dropzone": "^11.3.2",
     "react-use-gesture": "^9.1.3",
     "v8n": "^1.3.3",
-    "zustand": "^3.5.2"
+    "zustand": "^3.6.5"
   }
 }
