--- a/packages/plugin-bezier/package.json
+++ b/packages/plugin-bezier/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leva-ui/plugin-bezier",
-  "version": "0.9.14",
+  "version": "0.10.0-alpha.1",
   "main": "dist/leva-ui-plugin-bezier.cjs.js",
   "module": "dist/leva-ui-plugin-bezier.esm.js",
   "types": "dist/leva-ui-plugin-bezier.cjs.d.ts",
@@ -13,8 +13,8 @@
   "bugs": "https://github.com/pmndrs/leva/issues",
   "peerDependencies": {
     "leva": ">=0.9.14",
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=18.0",
+    "react-dom": ">=18.0"
   },
   "dependencies": {
     "react-use-measure": "^2.0.4"
