--- a/packages/plugin-spring/package.json
+++ b/packages/plugin-spring/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leva-ui/plugin-spring",
-  "version": "0.9.14",
+  "version": "0.10.0-alpha.1",
   "main": "dist/leva-ui-plugin-spring.cjs.js",
   "module": "dist/leva-ui-plugin-spring.esm.js",
   "types": "dist/leva-ui-plugin-spring.cjs.d.ts",
@@ -13,8 +13,8 @@
   "bugs": "https://github.com/pmndrs/leva/issues",
   "peerDependencies": {
     "leva": ">=1.0.0",
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=18.0",
+    "react-dom": ">=18.0"
   },
   "dependencies": {
     "@react-spring/web": "9.2.3"
