--- a/demo/package.json
+++ b/demo/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3200",
     "build": "vite build",
     "serve": "vite preview"
   },
@@ -11,7 +11,7 @@
     "@radix-ui/react-icons": "^1.0.3",
     "@react-three/drei": "^6.1.2",
     "@react-three/fiber": "^7.0.1",
-    "@stitches/react": "0.2.0",
+    "@stitches/react": "1.2.5",
     "leva": "*",
     "noisejs": "^2.1.0",
     "react": "^17.0.2",
@@ -25,6 +25,6 @@
     "@types/react-dom": "^17.0.7",
     "@vitejs/plugin-react-refresh": "^1.3.3",
     "typescript": "^4.3.2",
-    "vite": "2.0.5"
+    "vite": "2.6.14"
   }
 }
