--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     ]
   },
   "scripts": {
-    "postinstall": "husky install && patch-package && preconstruct dev",
+    "postinstall": "husky install && preconstruct dev",
     "build": "preconstruct build",
     "watch": "preconstruct watch",
     "dev": "preconstruct dev",
@@ -54,13 +54,13 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.14.5",
-    "@changesets/cli": "^2.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@changesets/cli": "^2.18.0",
     "@emotion/react": "^11.1.5",
-    "@preconstruct/cli": "^2.1.0",
+    "@preconstruct/cli": "^2.1.5",
     "@radix-ui/react-icons": "^1.0.3",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
