chore: remove yarn

--- a/package.json
+++ b/package.json
@@ -17,20 +17,19 @@
     "build": "preconstruct build",
     "watch": "preconstruct watch",
     "dev": "preconstruct dev",
-    "lint": "pretty-quick --staged",
     "lint:full": "eslint packages/*/src",
-    "release": "yarn build && yarn changeset publish",
+    "lint": "pretty-quick --staged",
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
-    "size": "yarn size-limit",
+    "size": "pnpm size-limit",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook --quiet",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "demo:dev": "yarn workspace demo dev",
-    "demo:build": "yarn workspace demo build",
-    "demo:serve": "yarn workspace demo serve",
-    "ci:test": "yarn demo:build && start-server-and-test demo:serve http-get://localhost:5000 cypress:run",
+    "demo:dev": "pnpm run dev --filter demo",
+    "demo:build": "pnpm run build --filter demo",
+    "demo:serve": "pnpm run serve --filter demo",
+    "ci:test": "pnpm demo:build && start-server-and-test demo:serve http-get://localhost:5000 cypress:run",
     "prepare": "husky install"
   },
   "size-limit": [
@@ -86,6 +85,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "patch-package": "^6.4.7",
+    "pnpm": "^6.22.2",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.2",
