--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,52 +1,59 @@
 name: Release
-
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - '**/package.json'
       - '.changeset/**'
-
+      - '.github/workflows/release.yml'
+env:
+  HUSKY: 0 # Bypass husky commit hook for CI
 jobs:
-  release:
-    name: Release
+  version:
+    timeout-minutes: 8
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
+      - name: checkout code repository
         uses: actions/checkout@v2
         with:
-          # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
           fetch-depth: 0
 
       - name: Use Node
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '16'
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
         with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-
+            ${{ runner.os }}-
 
-      - name: Install dependencies
-        run: yarn install --silent
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.9.1
+          run_install: true
 
-      - name: Create Release Pull Request or Publish to npm
+      - name: Set up NPM credentials
+        run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Create versions PR & prepare publish
         id: changesets
         uses: changesets/action@master
+        # if: github.ref == 'refs/heads/master'
         with:
-          # This expects you to have a script called release which does a build for your packages and calls changeset publish
-          publish: yarn release
-          commit: 'chore(release): update monorepo packages versions'
-          title: 'Upcoming Release Changes'
+          version: pnpm ci:version
+          publish: pnpm ci:publish
+          # Messages
+          commit: 'chore(deploy): Release'
+          title: 'chore(deploy): Release'
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # npm publish token required for publishing. Set this in secrets
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          # automatically available in actions
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
