--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dev": "preconstruct dev",
     "lint": "pretty-quick --staged",
     "lint:full": "eslint packages/*/src",
-    "release": "yarn build && yarn changeset publish",
+    "ci:version": "yarn changeset version",
+    "ci:release": "yarn build && yarn changeset publish",
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
     "size": "yarn size-limit",
