--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on:
       - '.github/**'
       - 'packages/**'
       - 'package.json'
+      - 'yarn.lock'
       - '!demo/**'
       - '!docs/**'
       - '!**.md'
