--- a/package.json
+++ b/package.json
@@ -19,21 +19,20 @@
     "dev": "preconstruct dev",
     "lint": "pretty-quick --staged",
     "lint:full": "eslint packages/*/src",
-    "ci:version": "yarn changeset version",
-    "ci:release": "yarn build && yarn changeset publish",
+    "ci:version": "pnpm changeset version",
+    "ci:release": "pnpm build && pnpm changeset publish",
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
-    "size": "yarn size-limit",
+    "size": "pnpm size-limit",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook --quiet",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "demo:dev": "yarn workspace demo dev",
-    "demo:build": "yarn workspace demo build",
-    "demo:serve": "yarn workspace demo serve",
-    "ci:test": "yarn demo:build && start-server-and-test demo:serve http-get://localhost:5000 cypress:run",
+    "demo:dev": "pnpm --filter demo dev",
+    "demo:build": "pnpm --filter demo build",
+    "demo:serve": "pnpm --filter demo serve",
     "prepare": "husky install",
-    "prettier": "prettier --check ."
+    "prettier": "prettier --check .",
+    "manypkg:check": "manypkg check",
+    "manypkg:fix": "manypkg fix"
   },
   "size-limit": [
     {
@@ -52,17 +51,22 @@
     "url": "https://github.com/pmndrs/leva.git"
   },
   "bugs": "https://github.com/pmndrs/leva/issues",
-  "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+  "prettier": {
+    "bracketSameLine": true,
+    "semi": false,
+    "trailingComma": "es5",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "printWidth": 120
   },
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.17.0",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
     "@changesets/cli": "^2.18.1",
     "@emotion/react": "^11.7.1",
+    "@manypkg/cli": "^0.19.1",
     "@preconstruct/cli": "^2.1.5",
     "@radix-ui/react-icons": "^1.0.3",
     "@storybook/addon-actions": "^6.4.18",
@@ -70,17 +74,14 @@
     "@storybook/addon-links": "^6.4.18",
     "@storybook/addon-storysource": "^6.4.18",
     "@storybook/react": "^6.4.18",
-    "@testing-library/cypress": "^8.0.2",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "all-contributors-cli": "^6.20.0",
     "babel-eslint": "^10.1.0",
-    "cypress": "6.9.1",
     "eslint": "^8.8.0",
     "eslint-config-react-app": "^7.0.0",
-    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
@@ -91,18 +92,8 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "start-server-and-test": "^1.14.0",
     "tsd": "^0.19.1",
-    "typescript": "4.5.5"
-  },
-  "prettier": {
-    "bracketSameLine": true,
-    "semi": false,
-    "trailingComma": "es5",
-    "singleQuote": true,
-    "tabWidth": 2,
-    "printWidth": 120
+    "typescript": "^4.5.5"
   }
 }
