--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -34,5 +34,9 @@
     "react-dropzone": "^12.0.0",
     "v8n": "^1.3.3",
     "zustand": "^3.6.9"
+  },
+  "devDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
