--- a/packages/plugin-spring/package.json
+++ b/packages/plugin-spring/package.json
@@ -18,5 +18,10 @@
   },
   "dependencies": {
     "@react-spring/web": "9.4.2"
+  },
+  "devDependencies": {
+    "leva": "*",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
