--- a/demo/package.json
+++ b/demo/package.json
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^7.0.26",
     "@stitches/react": "^1.2.8",
     "@use-gesture/react": "^10.2.5",
+    "@vitejs/plugin-react": "^1.3.1",
     "leva": "*",
     "noisejs": "^2.1.0",
     "react": "^17.0.2",
@@ -28,7 +29,6 @@
   "devDependencies": {
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "typescript": "^4.6.3",
     "vite": "2.7.13"
   }
