--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@changesets/cli": "^2.22.0",
+    "@emotion/react": "^11.7.1",
     "@manypkg/cli": "^0.19.1",
     "@preconstruct/cli": "^2.1.5",
     "@radix-ui/react-icons": "^1.0.3",
@@ -91,6 +92,8 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
+    "react": "^17",
+    "react-dom": "^17",
     "start-server-and-test": "^1.14.0",
     "tsd": "^0.20.0",
     "typescript": "^4.6.3"
