fix lint warnings for dates plugin

--- a/package.json
+++ b/package.json
@@ -45,6 +45,11 @@
       "name": "Leva Plugin Spring",
       "limit": "3s",
       "path": "packages/plugin-spring/dist/leva-ui-plugin-spring.*.prod.js"
+    },
+    {
+      "name": "Leva Plugin Dates",
+      "limit": "3s",
+      "path": "packages/plugin-dates/dist/leva-ui-plugin-dates.*.prod.js"
     }
   ],
   "repository": {
