chore: migrate to pnpm + package updates

--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.0.1",
   "license": "MIT",
   "private": true,
-  "workspaces": [
-    "packages/*",
-    "demo"
-  ],
   "preconstruct": {
     "packages": [
       "packages/*"
@@ -19,18 +15,18 @@
     "dev": "preconstruct dev",
     "lint": "pretty-quick --staged",
     "lint:full": "eslint packages/*/src",
-    "ci:version": "yarn changeset version",
-    "ci:release": "yarn build && yarn changeset publish",
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
-    "size": "yarn build && size-limit",
+    "size": "size-limit",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook --quiet",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "demo:dev": "yarn workspace demo dev",
-    "demo:build": "yarn workspace demo build",
-    "demo:serve": "yarn workspace demo serve",
+    "demo:dev": "pnpm --filter demo run dev",
+    "demo:build": "pnpm --filter demo un build",
+    "demo:serve": "pnpm --filter demo un serve",
+    "ci:version": "pnpm changeset version && pnpm --filter \"@use-gesture/*\" install --lockfile-only",
+    "ci:publish": "pnpm build && pnpm changeset publish",
     "ci:test": "yarn demo:build && start-server-and-test demo:serve http-get://localhost:5000 cypress:run",
     "prepare": "husky install",
     "prettier": "prettier --check ."
@@ -77,8 +73,8 @@
     "@storybook/addon-storysource": "^6.4.18",
     "@storybook/react": "^6.4.18",
     "@testing-library/cypress": "^8.0.2",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "all-contributors-cli": "^6.20.0",
@@ -93,16 +89,16 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
-    "patch-package": "^6.4.7",
+    "pnpm": "^7.17.0",
     "postinstall-postinstall": "^2.1.0",
-    "prettier": "^2.5.1",
+    "prettier": "^2.8.0",
     "pretty-quick": "^3.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "size-limit": "^8.1.0",
     "start-server-and-test": "^1.14.0",
-    "tsd": "^0.19.1",
-    "typescript": "4.5.5"
+    "tsd": "^0.24.1",
+    "typescript": "4.9.3"
   },
   "prettier": {
     "bracketSameLine": true,
