--- a/demo/package.json
+++ b/demo/package.json
@@ -14,17 +14,17 @@
     "@stitches/react": "1.2.8",
     "leva": "*",
     "noisejs": "^2.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-use": "^17.3.2",
-    "three": "^0.143.0",
+    "three": "^0.146.0",
     "wouter": "^2.7.5"
   },
   "devDependencies": {
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
-    "typescript": "^4.5.5",
-    "vite": "2.7.13"
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^2.2.0",
+    "typescript": "^4.9.3",
+    "vite": "3.2.4"
   }
 }
