fix: remove cypress

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,9 @@
   "extends": "react-app",
   "rules": {
     "no-console": "warn"
-  },
-  "plugins": ["cypress"],
-  "env": {
-    "cypress/globals": true
   }
+  // "plugins": ["cypress"],
+  // "env": {
+  //   "cypress/globals": true
+  // }
 }
