--- a/demo/package.json
+++ b/demo/package.json
@@ -11,7 +11,7 @@
     "@radix-ui/react-icons": "^1.0.3",
     "@react-three/drei": "^9.44.1",
     "@react-three/fiber": "^8.9.1",
-    "@stitches/react": "1.2.8",
+    "@stitches/react": "^1.2.8",
     "leva": "*",
     "noisejs": "^2.1.0",
     "react": "^18.2.0",
@@ -25,6 +25,6 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^2.2.0",
     "typescript": "^4.9.3",
-    "vite": "3.2.4"
+    "vite": "^3.2.4"
   }
 }
