--- a/demo/src/sandboxes/leva-advanced-panels/package.json
+++ b/demo/src/sandboxes/leva-advanced-panels/package.json
@@ -4,9 +4,9 @@
   "main": "src/index.jsx",
   "dependencies": {
     "leva": "*",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3"
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
