--- a/demo/src/sandboxes/leva-plugin-dates/package.json
+++ b/demo/src/sandboxes/leva-plugin-dates/package.json
@@ -6,9 +6,9 @@
   "dependencies": {
     "@leva-ui/plugin-dates": "*",
     "leva": "*",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3"
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.2",
