--- a/demo/src/sandboxes/leva-react18/package.json
+++ b/demo/src/sandboxes/leva-react18/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.0.2",
     "leva": "*",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3"
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
