--- a/demo/src/sandboxes/leva-transient/package.json
+++ b/demo/src/sandboxes/leva-transient/package.json
@@ -6,9 +6,9 @@
     "@react-three/drei": "^4.3.3",
     "@react-three/fiber": "^6.0.21",
     "leva": "*",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
+    "react-scripts": "^5.0.1",
     "three": "^0.143.0"
   },
   "scripts": {
