--- a/demo/src/sandboxes/leva-ui/package.json
+++ b/demo/src/sandboxes/leva-ui/package.json
@@ -6,10 +6,10 @@
   "main": "src/index.jsx",
   "dependencies": {
     "leva": "*",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
     "react-dropzone": "11.3.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-use-gesture": "^9.0.0"
   },
   "scripts": {
