--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "size-limit": "^8.1.0",
     "start-server-and-test": "^1.14.0",
     "tsd": "^0.24.1",
-    "typescript": "4.9.3"
+    "typescript": "^4.9.3"
   },
   "prettier": {
     "bracketSameLine": true,
