--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -23,8 +23,8 @@
   },
   "dependencies": {
     "@radix-ui/react-portal": "^1.0.1",
-    "@radix-ui/react-tooltip": "1.0.2",
-    "@stitches/react": "1.2.8",
+    "@radix-ui/react-tooltip": "^1.0.2",
+    "@stitches/react": "^1.2.8",
     "@use-gesture/react": "^10.2.5",
     "colord": "^2.9.2",
     "dequal": "^2.0.2",
