--- a/packages/plugin-spring/package.json
+++ b/packages/plugin-spring/package.json
@@ -17,6 +17,6 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@react-spring/web": "9.5.5"
+    "@react-spring/web": "^9.5.5"
   }
 }
