--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -18,8 +18,8 @@
     ]
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
     "@radix-ui/react-portal": "^1.0.1",
