--- a/packages/plugin-plot/package.json
+++ b/packages/plugin-plot/package.json
@@ -13,9 +13,7 @@
   "bugs": "https://github.com/pmndrs/leva/issues",
   "peerDependencies": {
     "@use-gesture/react": "^10.0.0",
-    "leva": ">=0.9.15",
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "leva": ">=0.9.15"
   },
   "dependencies": {
     "mathjs": "^11.4.0"
