--- a/packages/plugin-dates/package.json
+++ b/packages/plugin-dates/package.json
@@ -13,7 +13,8 @@
   "bugs": "https://github.com/pmndrs/leva/issues",
   "peerDependencies": {
     "@use-gesture/react": "^10.0.0",
-    "leva": ">=0.9.34"
+    "leva": ">=0.9.34",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
     "react-datepicker": "^4.8.0"
