--- a/packages/plugin-plot/package.json
+++ b/packages/plugin-plot/package.json
@@ -13,7 +13,8 @@
   "bugs": "https://github.com/pmndrs/leva/issues",
   "peerDependencies": {
     "@use-gesture/react": "^10.0.0",
-    "leva": ">=0.9.15"
+    "leva": ">=0.9.15",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
     "mathjs": "^11.4.0"
